@@ -71,6 +71,47 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="42~rc" date="2022-03-06" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 42.rc</p>
+        <ul>
+          <li>Updated Translations</li>
+          <li>Use new gnome post_install script !106 (Bobby Rong)</li>
+          <li>gcalc build fixes (Daniel Espinoza Ortiz)</li>
+          <li>Updated screenshots (Christopher Davis)</li>
+          <li>Set default focus to entry (Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
+    <release version="42~beta" date="2022-02-13" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 42.beta</p>
+        <ul>
+          <li>Updated Translations</li>
+          <li>Fixed build issues with GCI entry controller tests #250 (Robert Roth)</li>
+          <li>Force LTR in history view #252 (Robert Roth)</li>
+          <li>programing mode: Force bit digits to be always LTR #258 (Yosef Or Boczko)</li>
+          <li>Use AdwApplication (Alexander Mikhaylenko)</li>
+          <li>ui: Fix styles !105 (Alexander Mikhaylenko)</li>
+        </ul>
+      </description>
+    </release>
+    <release version="42~alpha" date="2022-01-08" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 42.alpha</p>
+        <ul>
+          <li>Updated Translations</li>
+          <li>build: Support flatpak development builds (Óscar Fernández Díaz)</li>
+          <li>build: migrated to GTK4 !98 (Cristopher Davis, Robert Roth)</li>
+          <li>entry: Added currencies completion provider (Robert Roth)</li>
+          <li>entry: Fixed percentage evaluation error #237 (Robert Roth)</li>
+          <li>internal: Moved history view from MathDisplay to MathWindow (Robert Roth)</li>
+          <li>window: set default width for basic and keyboard mode #240 (Robert Roth)</li>
+          <li>buttons: removed destructive action class from clear button #242 (Robert Roth)</li>
+          <li>converter: search support in unit selector, separate conversion category selector #108 (Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="41.0" date="2021-09-18" type="stable">
       <description>
         <p>Overview of changes in gnome-calculator 41.0</p>
