@@ -1,3 +1,10 @@
+Overview of changes in gnome-calculator 42.rc
+    * Updated translations
+    * Use new gnome post_install script !106 (Bobby Rong)
+    * gcalc build fixes (Daniel Espinoza Ortiz)
+    * Updated screenshots (Christopher Davis)
+    * Set default focus to entry (Robert Roth)
+
 Overview of changes in gnome-calculator 42.beta
     * Updated Translations
     * Fixed build issues with GCI entry controller tests #250 (Robert Roth)
